@@ -3,4 +3,4 @@ sonar.exclusions=resources/lib/pyscrypt/*,resources/lib/urllib3/**/*,resources/l
 #sonar.inclusions=
 
 sonar.projectName=Retrospect
-sonar.projectVersion=5.1.7
+sonar.projectVersion=5.1.8
