@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon  id="plugin.video.retrospect"
-        version="5.1.7"
+        version="5.1.8"
         name="Retrospect"
         provider-name="Bas Rieter">
 
@@ -129,9 +129,10 @@
 
         <license>CC-BY-NC-SA-4.0</license>
         <language>en nl de se no lt lv fi</language>
-        <news>[B]Retrospect v5.1.7 - Changelog - 2020-02-12[/B]
+        <news>[B]Retrospect v5.1.8 - Changelog - 2020-02-13[/B]
 
-This update contains fixes for a number of channels (Dutch, Swedish, Belgian and Norwegian). We
+This is a quick fix for an NPO issue. It also contains from version 5.1.7:
+That update contains fixes for a number of channels (Dutch, Swedish, Belgian and Norwegian). We
 also added some small improvements such as &quot;air date&quot; infolabels and a new context menu entry to
 show the video information dialog window.
 
@@ -143,6 +144,7 @@ show the video information dialog window.
 * Added: show &quot;air date&quot; as InfoLabel if a date is available
 
 [B]Channel related[/B]
+* Fixed: refactoring broke NPO &#x27;recent items&#x27; (Fixes #1295)
 * Fixed: Most recent shows were not working for NRK.no (Fixes #1274)
 * Fixed: missing video item type &#x27;Variant&#x27; caused missing episodes (Fixes #1284)
 * Updated: MTG Viafree channel - enhance look and feel (Fixes #1285)
