@@ -1,6 +1,7 @@
-[B]Retrospect v5.1.7 - Changelog - 2020-02-12[/B]
+[B]Retrospect v5.1.8 - Changelog - 2020-02-13[/B]
 
-This update contains fixes for a number of channels (Dutch, Swedish, Belgian and Norwegian). We
+This is a quick fix for an NPO issue. It also contains from version 5.1.7:
+That update contains fixes for a number of channels (Dutch, Swedish, Belgian and Norwegian). We
 also added some small improvements such as "air date" infolabels and a new context menu entry to
 show the video information dialog window.
 
